syntax = "proto3";

package subscription;

service SubscriptionService {
  rpc CreateSubscription (CreateSubscriptionArgs) returns (Subscription) {}
  rpc GetSubscriptions (GetSubscriptionsArgs) returns (Subscriptions) {}
  rpc UpdateSubscription (UpdateSubscriptionArgs) returns (Subscription) {}
  rpc UnFollow (unFollowArgs) returns (Subscription) {}
}

message unFollowArgs {
  string id = 1;
  string targetId = 2;
}

message SubscriptionId {
  string _id = 1;
}

message GetSubscriptionsArgs {
  repeated string ids = 1;
}

message CreateSubscriptionArgs {
  string userId = 1;
  repeated string follower = 2;
  repeated string following = 3;
}

message Subscription {
  string _id = 1;
  string userId = 2;
  repeated string follower = 3;
  repeated string following = 4;
  string _createdAt = 5;
  string _updatedAt = 6;
}

message Subscriptions {
  repeated Subscription subscriptions = 1;
}

message UpdateSubscriptionArgs {
  string _id = 1;
  repeated string follower = 2;
  repeated string following = 3;
}
